# pra-visualizacion-datos

./: README.md  cleaner_athletes_data.py  crossfit.ipynb  index.html  pyproject.toml  repetidos.txt  scrap_athlete_profile.py
