[tool.poetry]
name = "02"
version = "0.1.0"
description = ""
authors = ["Axaryk <axaryk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
